deploy/k8s/update-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: update-server
  namespace: fleet-ota
  labels:
    app: update-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: update-server
  template:
    metadata:
      labels:
        app: update-server
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: update-server
          image: ghcr.io/kalbhor1124/fleet-ota/update-server:1.0.0
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
